Refactoring update white list worker